examples/loadbalancer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-checkit-v1
  namespace: loadbalancer
spec:
  selector:
    app: nginx
    feature: version1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-checkit-v2
spec:
  selector:
    app: nginx
    feature: version2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
