examples/loadbalancer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: loadbalancer
spec:
  rules:
    - host: kdynaroll.shiftflow.ml
      http:
        paths:
          - path: /checkit/v1
            pathType: Prefix
            backend:
              service:
                name: nginx-checkit-v1
                port:
                  number: 80
          - path: /checkit/v2
            pathType: Prefix
            backend:
              service:
                name: nginx-checkit-v2
                port:
                  number: 80
